# astris.js

./: .gitattributes  .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  build.ts  index.d.ts  index.js  package.json  test-bot.js  tsconfig.json  tsup.config.ts  turbo.json  wasi-worker-browser.mjs
.changeset/: dark-rocks-happen.md  huge-meteors-stand.md  lucky-planets-sink.md  polite-zebras-rest.md
.github/workflows/: CI.yml  ci.yml
__test__/: gateway.ts  index.spec.ts
crates/astrisjs_cli/: Cargo.toml
crates/astrisjs_cli/src/: main.rs  runtime.rs
crates/astrisjs_cli/src/ui/: mod.rs  styling.rs  symbols.rs
crates/astrisjs_core/: Cargo.toml
crates/astrisjs_core/src/: lib.rs  logger.rs
crates/astrisjs_core/src/gateway/: client.rs
crates/astrisjs_core/src/gateway/packet/: heartbeat.rs  hello.rs  mod.rs
crates/astrisjs_runtime/: Cargo.toml
crates/astrisjs_runtime/src/: lib.rs
docs/superpowers/plans/: 2026-04-07-package-architecture.md
docs/superpowers/specs/: 2026-04-07-package-architecture-design.md
scripts/: resolve-workspace-deps.ts
src/: gateway.rs  index.ts  lib.rs
src/entities/: client.ts  command.ts  index.ts  respondable.ts
src/gateway/: client.rs  mod.rs
src/gateway/packet/: hello.rs  identify.rs  mod.rs
src/types/: globals.d.ts
src/utils/: env.ts
