
[package]
authors = ["Eric Freitas <contato@freitaseric.com>"]
edition = "2021"
name    = "astrisjs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.31"
napi = { version = "3.0.0", features = ["napi4", "tokio_rt", "serde-json"] }
napi-derive = "3.0.0"
once_cell = "1.21.3"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.49.0"
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-native-roots",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
