
[package]
authors = ["Eric Freitas <contato@freitaseric.com>"]
edition = "2021"
name = "astrisjs_core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.31"
napi = { version = "3.0.0", features = ["napi4", "tokio_rt", "serde-json"] }
napi-derive = "3.0.0"
once_cell = "1.21.3"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["time"] }
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-native-roots",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
console = "0.16.2"

[build-dependencies]
napi-build = "2"
